Generating JRE